# pipecat-gnani

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/foundational/: agent.py  env.example
pipecat_gnani/: __init__.py  _common.py  _sdk.py  stt.py  tts.py
