[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipecat-gnani"
version = "0.5.0"
description = "Pipecat service integration for Gnani speech AI — STT & TTS for Indian languages"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Genvoice", email = "speechstack@gnani.ai" },
]
keywords = [
    "pipecat", "pipecat-ai", "voice-agent", "conversational-ai",
    "gnani", "vachana", "indian-languages", "indic",
    "stt", "tts", "speech-to-text", "text-to-speech",
    "multilingual", "streaming", "websocket",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pipecat-ai>=0.0.50",
    "gnani>=0.6.0,<1.0",
    "websockets>=13.1,<16.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.1",
    "pytest-cov>=4.0",
    "python-dotenv>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://gnani.ai"
Documentation = "https://docs.gnani.ai/"
Repository = "https://github.com/Gnani-AI-Mintlify/pipecat-gnani"
Issues = "https://github.com/Gnani-AI-Mintlify/pipecat-gnani/issues"

[tool.hatch.build.targets.wheel]
packages = ["pipecat_gnani"]

[tool.hatch.build.targets.sdist]
include = ["/pipecat_gnani"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B904",   # raise ... from err (pre-existing pattern in exception guards)
    "SIM105", # contextlib.suppress (pre-existing async cleanup pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["pipecat_gnani"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live API (deselect with '-m not integration')",
    "slow: marks slow tests (deselect with '-m not slow')",
]
