[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipecat-gnani"
version = "0.5.5"
description = "Pipecat service integration for Gnani speech AI — STT & TTS for Indian languages"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.11"
authors = [
    { name = "Genvoice", email = "speechstack@gnani.ai" },
]
keywords = [
    "pipecat", "pipecat-ai", "voice-agent", "conversational-ai",
    "gnani", "vachana", "indian-languages", "indic",
    "stt", "tts", "speech-to-text", "text-to-speech",
    "multilingual", "streaming", "websocket",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pipecat-ai>=0.0.50",
    "gnani-vachana>=0.7.3,<1.0",
    "websockets>=12.0,<16.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
example = [
    "pipecat-ai[runner,webrtc,silero,groq]>=1.5.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.1",
    "pytest-cov>=4.0",
    "python-dotenv>=1.0",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://gnani.ai"
Documentation = "https://docs.gnani.ai/"
Repository = "https://github.com/Gnani-AI-Mintlify/pipecat-gnani"
Issues = "https://github.com/Gnani-AI-Mintlify/pipecat-gnani/issues"

[tool.hatch.build.targets.wheel]
packages = ["pipecat_gnani"]

[tool.hatch.build.targets.sdist]
include = ["/pipecat_gnani"]

[tool.uv]
package = true

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B904",   # raise ... from err (pre-existing pattern in exception guards)
    "SIM105", # contextlib.suppress (pre-existing async cleanup pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["pipecat_gnani"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live API (deselect with '-m not integration')",
    "slow: marks slow tests (deselect with '-m not slow')",
]
